--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "joi": "^5.1.0",
     "mssql": "*",
     "mysql": "^2.7.0",
+    "pg": "^4.4.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "*",
     "sqlite3": "^3.0.4",
     "tedious": "^1.11.0"
